--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ author:
   youtube          :
   wikipedia        :
   csdn             : https://yeatsliao.blog.csdn.net/
+  yuque            : https://www.yuque.com/yeats_liao
 
 
 # Reading Files
